Acrescenta DEBUG_HOST e DEBUG_PORT às configurações padrão

--- a/webhook/webhook-dist.cfg
+++ b/webhook/webhook-dist.cfg
@@ -36,5 +36,12 @@ make = /usr/bin/make
 ; DEBUG = True: para depuracao em desenvolvimento
 DEBUG = False
 
+; DEBUG_HOST: se DEBUG, IP onde será disponível o serviço
+DEBUG_HOST = 0.0.0.0
+
+; DEBUG_PORT: se DEBUG, PORT (porta) onde será disponível o serviço
+DEBUG_PORT = 5000
+
 ; DEBUG_LEVEL: se DEBUG, nivel de debug desejado (0=Warning, 1=Error)
 DEBUG_LEVEL = 0
+
