Corrige caminho de diretório no "path exemplo"

--- a/webhook/webhook-vhttpd-dist.conf
+++ b/webhook/webhook-vhttpd-dist.conf
@@ -11,7 +11,7 @@ LogLevel warn
     # application reload = On
     WSGIScriptReloading Off
 
-    <Directory /var/www/flask>
+    <Directory /var/www/webhook>
         WSGIProcessGroup webhook
         WSGIApplicationGroup %{GLOBAL}
         Order deny,allow
