Atualiza caminhos segundo sugerido nas instruções de instalação

--- a/webhook/webhook-vhttpd-dist.conf
+++ b/webhook/webhook-vhttpd-dist.conf
@@ -4,9 +4,10 @@ LogLevel warn
     #ServerName  hook.www-git 
     #ServerAlias hook.www-git.prevnet
     DocumentRoot /var/www/webhook/
+    Alias /artigos-download /var/tmp/webhook_tmp/artigos-download
 
     WSGIDaemonProcess webhook user=apache group=apache threads=5
-    WSGIScriptAlias / /var/www/webhook/webhook.wsgi
+    WSGIScriptAlias /artigos-webhook /var/www/webhook/webhook.wsgi
 
     # application reload = On
     WSGIScriptReloading Off
