Corrige endereço padrão URL para de acesso ao repositório no Gitlab

--- a/webhook/webhook-dist.cfg
+++ b/webhook/webhook-dist.cfg
@@ -16,7 +16,7 @@ gitlab_webhook_user = admin
 gitlab_webhook_pass = password
 
 ; gitlab_url: URL para de acesso ao repositório no Gitlab
-gitlab_url = http://www-git-tst/documentos/artigos.git
+gitlab_url = http://www-git-tst/documentos/artigos
 
 ; gitlab_target_branch: branch unica para o webhook
 gitlab_target_branch = master
