--- a/webhook/webhook-dist.cfg
+++ b/webhook/webhook-dist.cfg
@@ -18,6 +18,9 @@ gitlab_webhook_pass = password
 ; gitlab_url: URL para de acesso ao repositório no Gitlab
 gitlab_url = http://www-git-tst/documentos/artigos
 
+; gitlab_url: sub-URL para download de PDF gerados (igual ao "Alias" no vhttpd)
+gitlab_url_download = artigos-webhook
+
 ; gitlab_target_branch: branch unica para o webhook
 gitlab_target_branch = master
 
