Corrige nome padrão de parâmetro para "sub-URL" para download de arquivos gerados

--- a/webhook/webhook-dist.cfg
+++ b/webhook/webhook-dist.cfg
@@ -19,7 +19,7 @@ gitlab_webhook_pass = password
 gitlab_url = http://www-git-tst/documentos/artigos
 
 ; gitlab_url: sub-URL para download de PDF gerados (igual ao "Alias" no vhttpd)
-gitlab_url_download = artigos-webhook
+gitlab_url_download = artigos-download
 
 ; gitlab_target_branch: branch unica para o webhook
 gitlab_target_branch = master
